[package]
name = "soroban-token-contract"
description = "Soroban standard token contract"
homepage = "https://github.com/stellar/soroban-token-contract"
repository = "https://github.com/stellar/soroban-token-contract"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
testutils = ["soroban-sdk/testutils", "soroban-sdk-auth/testutils", "dep:ed25519-dalek"]

[dependencies]
ed25519-dalek = { version = "1.0.1", optional = true }
num-bigint = { version = "0.4", optional = true }
soroban-sdk = { version = "0.0.3" }
soroban-sdk-auth = { version = "0.0.0" }

[dev-dependencies]
soroban-token-contract = { path = ".", features = ["export", "testutils"] }
rand = { version = "0.7.3" }

[patch.crates-io]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b4cc8fc" }
soroban-sdk-auth = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b4cc8fc" }
soroban-sdk-macros = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b4cc8fc" }
soroban-env-common = { git = "https://github.com/stellar/rs-soroban-env", rev = "2c084e9d" }
soroban-env-guest = { git = "https://github.com/stellar/rs-soroban-env", rev = "2c084e9d" }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "2c084e9d" }
soroban-env-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "2c084e9d" }
soroban-native-sdk-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "2c084e9d" }
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "5b129da" }

[profile.release]
codegen-units = 1
