[package]
name = "soroban-token-contract"
description = "Soroban standard token contract"
homepage = "https://github.com/stellar/soroban-token-contract"
repository = "https://github.com/stellar/soroban-token-contract"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"
version = "0.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils", "dep:ed25519-dalek"]

[dependencies]
ed25519-dalek = { version = "1.0.1", optional = true }
num-bigint = { version = "0.4", optional = true }
soroban-sdk = { version = "0.0.4" }
soroban-auth = { version = "0.0.4" }

[dev-dependencies]
soroban-token-contract = { path = ".", features = ["export", "testutils"] }
rand = { version = "0.7.3" }

[patch.crates-io]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "06e73968" }
soroban-auth = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "06e73968" }
soroban-sdk-macros = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "06e73968" }
soroban-env-common = { git = "https://github.com/stellar/rs-soroban-env", rev = "c8bc71d" }
soroban-env-guest = { git = "https://github.com/stellar/rs-soroban-env", rev = "c8bc71d" }
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env", rev = "c8bc71d" }
soroban-env-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "c8bc71d" }
soroban-native-sdk-macros = { git = "https://github.com/stellar/rs-soroban-env", rev = "c8bc71d" }
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "fee9a43" }

[profile.release]
codegen-units = 1
